--- a/src/App.scss
+++ b/src/App.scss
@@ -187,18 +187,29 @@
       z-index: 3;
     }
 
-
+    .mastery {
+      z-index: 1000;
+      position: relative;
+      
+      background-color: #032f3c;
+      display: flex;
+      align-content: center;
+      justify-content: center;
+    }
 
     .likert {
-      --likert-rows: 5;
+      --likert-rows: 9;
       display: inline-grid;
       max-width: 900px;
+      max-height: 500px;
       grid-auto-rows: 1fr;
       gap: 1em;
-      grid-template-columns: repeat(var(--likert-rows), minmax(0, 1fr));
+      // grid-template-columns: repeat(var(--likert-rows), minmax(0, 1fr));
+      grid-template-columns: 3fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      align-content: center;
   }
 
-  @media only screen and (max-width: 680px) {
+  @media only screen and (max-width: 200px) and (max-height: 200px) {
       .likert {
           grid-template-columns: minmax(0, 400px);
           justify-content: center;
@@ -207,8 +218,9 @@
 
   .likert input {
       max-width: 250px;
-      position: fixed;
+      position: absolute;
       opacity: 0;
+      background: transparent;
       pointer-events: none;
   }
 
@@ -223,12 +235,12 @@
       width: 100%;
       height: 100%;
       padding: 20px;
-      background: #dcdcdc;
+      background: #032f3c;
       transition: background .2s ease-in-out;
   }
 
   .likert input:checked + span {
-      outline: black auto 1px;
+      outline: white auto 1px;
       background: transparent;
   }
 
@@ -237,7 +249,7 @@
   }
 
   .likert span:hover {
-      background: #f1f1f1;
+      background: transparent;
       outline: lightgrey auto 0.5px;
   }
   
@@ -256,8 +268,17 @@
   .left{
     position: absolute;
     top: 150px;
-    left: 50px;
+    left: 100px;
     
   }
 
+  .quiz{
+    color: white;
+    opacity: 75;
+  }
+
+  .submit{
+    height: 100px;
+    align-content: center;
+  }
 }
