--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@
         margin-right: auto;
         width: 600px;
         height: 420px;
-
+        animation: rotation 6s infinite linear;
       }
       
       .imga1{
@@ -53,7 +53,14 @@
         }
       
       }
-
+    @keyframes rotation {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(359deg);
+      }
+    }
     .Water{
       position: absolute;
       left: 450px;
